[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hiddenlayer"
version = "0.1.0"
description = "State infrastructure for AI workflows."
requires-python = ">=3.11"
dependencies = ["click>=8.0", "python-dotenv>=1.0"]

[project.scripts]
hl = "hl.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["hl*"]
